# dist/api-docs.json
@@ -72,7 +72,7 @@
             }
         },
 
-        "/eliminar": {
+        "/eliminar/{id}": {
             "delete": {
                 "description": "elimina los usuarios de negocio",
                 "operationId": "delete",
@@ -80,13 +80,11 @@
                     "application/json"
                 ],
                 "parameters": [{
-                    "name": "Job Parameters",
-                    "in": "body",
-                    "description": "Job to add to the database",
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID e",
                     "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/id"
-                    }
+                    "type": "string"
                 }],
                 "responses": {
                     "200": {
@@ -98,21 +96,19 @@
                 }
             }
         },
-        "/obtener-usuarios": {
+        "/obtener-usuarios/{page}": {
             "get": {
                 "description": "regresa a los usuarios de negocio",
                 "operationId": "findById",
                 "produces": [
-                    "application/x-www-form-urlencoded"
+                    "application/json"
                 ],
                 "parameters": [{
-                    "name": "Job Parameters",
-                    "in": "body",
-                    "description": "Job to add to the database",
+                    "name": "page",
+                    "in": "path",
+                    "description": "ID e",
                     "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/pag"
-                    }
+                    "type": "integer"
                 }],
                 "responses": {
                     "200": {
@@ -124,7 +120,7 @@
                 }
             }
         },
-        "/actualizar": {
+        "/actualizar/{id}": {
             "put": {
                 "description": "actualiza al usuario de negocio",
                 "operationId": "ActualizarUsuario",
@@ -132,13 +128,11 @@
                     "application/json"
                 ],
                 "parameters": [{
-                    "name": "Job Parameters",
-                    "in": "body",
-                    "description": "Job to add to the database",
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID e",
                     "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/usuarioActualiza"
-                    }
+                    "type": "string"
                 }],
                 "responses": {
                     "200": {
@@ -177,16 +171,16 @@
                 }
             }
         },
-        "/user": {
+        "/user/{id}": {
             "get": {
                 "description": "regresa al usuario principal",
                 "operationId": "encuentra a usuario que inicia session",
                 "produces": [
-                    "application/x-www-form-urlencoded"
+                    "application/json"
                 ],
                 "parameters": [{
                     "name": "id",
-                    "in": "body",
+                    "in": "path",
                     "description": "ID e",
                     "required": true,
                     "type": "string"
