# routes/usuarios.js
@@ -8,7 +8,7 @@ var md_upload = multipart({ uploadDir: './uploads/usuario' });
 
 api.post('/registrar', UserController.agregar);
 api.get('/obtenerUsuarioByID/:id?', UserController.obtenerUsuarioByID);
-api.put('/actualizar', UserController.actualizar);
-api.get('/obtener-usuarios', UserController.obtener);
-api.delete('/eliminar', UserController.eliminar);
+api.put('/actualizar/:id?', UserController.actualizar);
+api.get('/obtener-usuarios/:page?', UserController.obtener);
+api.delete('/eliminar/:id?', UserController.eliminar);
 module.exports = api;
